<resources>
    <string name="app_name">SanoTimer-V1.0</string>
    <string name="dayMonday">MON</string>
    <string name="dayTuesday">TUE</string>
    <string name="dayWednesday">WED</string>
    <string name="dayThursday">THU</string>
    <string name="dayFriday">FRI</string>
    <string name="daySaturday">SAT</string>
    <string name="daySunday">SUN</string>
    <string name="weekly_sch_view_title">Weekly Schedule</string>
    <string name="floatingActionButtonDescription">floating action button to add a new daily schedule item</string>
    <string name="test_text">Test - here is daily schedule</string>
    <string name="sch_programmer_textview">Add Irrigation Schedule</string>
    <string name="sch_programmer_start_time">Start Time</string>
    <string name="sch_prog_stop_time_text">Stop Time</string>
    <string name="sch_prog_add_item_button">Add New Schedule Item</string>
    <string name="mon_radiobutton_text">MONDAY</string>
    <string name="tue_radiobutton_text">TUESDAY</string>
    <string name="wed_radiobutton_text">WEDNESDAY</string>
    <string name="thu_radiobutton_text">THURSDAY</string>
    <string name="fri_radiobutton_text">FRIDAY</string>
    <string name="sat_radiobutton_text">SATURDAY</string>
    <string name="sun_radiobutton_text">SUNDAY</string>
    <string name="weekly_sch_info_text">To view or edit schedule information for a specific day, tap on one of the buttons below.</string>
    <string name="no_sch_items_text">No schedule items for that day. To add a new schedule item tap button below.</string>
    <string name="record_delete_button">record delete image button</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="record_delete">record_delete</string>
</resources>