<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.WeeklySchedule" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/days_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="472dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/pad_horizontal"
            android:paddingVertical="@dimen/pad_vertical"
            android:paddingTop="@dimen/dimen_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <RadioButton
                android:id="@+id/monday_radioButton"
                style="@style/radio_button_style"
                android:text="@string/mon_radiobutton_text" />

            <RadioButton
                android:id="@+id/tuesday_radioButton"
                style="@style/radio_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tue_radiobutton_text" />

            <RadioButton
                android:id="@+id/wednesday_radioButton"
                style="@style/radio_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wed_radiobutton_text" />

            <RadioButton
                android:id="@+id/thursday_radioButton"
                style="@style/radio_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thu_radiobutton_text" />

            <RadioButton
                android:id="@+id/friday_radioButton"
                style="@style/radio_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fri_radiobutton_text" />

            <RadioButton
                android:id="@+id/saturday_radioButton"
                style="@style/radio_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sat_radiobutton_text" />

            <RadioButton
                android:id="@+id/sunday_radioButton"
                style="@style/radio_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/sun_radiobutton_text" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="389dp"
            android:layout_height="82dp"
            android:layout_marginTop="16dp"
            android:text="@string/weekly_sch_info_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/days_radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>